Update title and heading from 'Sintaxi Maragda' to 'La Joia Verbal'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sintaxi Maragda - Joc de Gramàtica</title>
+    <title>La Joia Verbal - Joc de Gramàtica</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -510,7 +510,7 @@
                         </div>
                         
                         <h1 className="text-4xl md:text-5xl font-black mb-2 bg-clip-text text-transparent bg-gradient-to-r from-lime-300 via-emerald-300 to-teal-300 tracking-tight leading-tight">
-                            Sintaxi<br/>Maragda
+                            La Joia<br/>Verbal
                         </h1>
                         <p className="text-green-200/70 mb-4 text-lg">Domina els temps verbals en català (B1-C2).</p>
                         <div className="mb-10 text-sm bg-white/10 rounded-full py-1 px-4 text-emerald-200 inline-block border border-emerald-500/20">
